# python_event_sourcing

./: .gitignore  2  Makefile  README.md  import_version.py  mprocs.yaml  pyproject.toml
apps/web_server/: Makefile  pyproject.toml
apps/web_server/src/web_server/: __init__.py  main.py
apps/web_server/tests/: test_main.py
tools/pg/: .gitignore  Makefile  README.md
