[project]
name = "web_server"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
  "pydantic",
  # "fastapi",
  "logic",
]

[tool.uv.sources]
logic = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_server"]
